Support for security mode in LB rule
